# mel

./: LICENSE  mel.cabal
lib/: pervasives.ml
src/: Internal.hs  Main.hs
src/Backend/: AST.hs  Partition.hs  PrettyPrint.hs
src/Frontend/: AST.hs  Alpha.hs  Builtins.hs  Dianostic.hs  Elaborate.hs  Monomorphise.hs  Parser.hs  Primitives.hs  Types.hs  Values.hs
src/Internal/: Fresh.hs  Name.hs
src/K/: AST.hs  Alpha.hs  ConstFold.hs  Defunctionalize.hs  Eliminate.hs  Globalize.hs  Inline.hs  Normalize.hs  Optimize.hs  PrettyPrint.hs  Types.hs  UnusedElim.hs
