name:                mel
version:             0.1.0.0
synopsis:            ML-like language compiler
-- description:         
homepage:            http://github.com/alpicola/mel
license:             MIT
license-file:        LICENSE
author:              Ryo Tanaka
maintainer:          ryo@alpico.la
-- copyright:           
category:            Compiler
build-type:          Simple
cabal-version:       >=1.8
data-files:          lib/pervasives.ml

executable mel
  main-is:             Main.hs
  -- other-modules:       
  build-depends:       base ==4.6.*, mtl ==2.1.*, containers ==0.5.*, parsec ==3.1.*,
                       bifunctors ==4.1.*, llvm-general==3.4.*, llvm-general-pure==3.4.*
  hs-source-dirs:      src
